[gd_scene load_steps=10 format=3 uid="uid://da8f6xic1rcdd"]

[ext_resource type="Script" path="res://scripts/fact_listing.gd" id="1_gtqsy"]
[ext_resource type="Theme" uid="uid://d0m1upkiiwl2s" path="res://themes/menu_btn_dark.tres" id="2_nyd6t"]
[ext_resource type="Shader" path="res://shaders/pattern_wavy.gdshader" id="2_tm8bj"]
[ext_resource type="PackedScene" uid="uid://cfto5f3wtfdqt" path="res://scenes/UiScenes/fact_btn.tscn" id="3_omm3u"]
[ext_resource type="Theme" uid="uid://diinvv5qdrf2v" path="res://themes/container_green.tres" id="4_80rx0"]
[ext_resource type="Theme" uid="uid://bkynhi7gd36bl" path="res://themes/menu_btn.tres" id="4_ik51a"]
[ext_resource type="Theme" uid="uid://kpqilwsnepqa" path="res://themes/nothing.tres" id="5_wceav"]
[ext_resource type="Theme" uid="uid://bsd1dkhc13v47" path="res://themes/plain.tres" id="7_lmege"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3at6s"]
shader = ExtResource("2_tm8bj")
shader_parameter/bg_col = Color(0.0840127, 0.0140531, 0.0804271, 1)
shader_parameter/double = true
shader_parameter/size = 10.0
shader_parameter/one_col = Color(0.198488, 0.0107199, 0.177253, 1)
shader_parameter/one_speed = 0.02
shader_parameter/one_opacity = 0.2
shader_parameter/two_col = Color(0.2, 0.0117647, 0.176471, 1)
shader_parameter/two_speed = 0.02
shader_parameter/two_opacity = 0.2

[node name="List" type="MarginContainer" node_paths=PackedStringArray("heading", "fact_container", "fact_title_label", "fact_body_label", "source_label")]
offset_right = 434.0
offset_bottom = 434.0
script = ExtResource("1_gtqsy")
heading = NodePath("MarginContainer/VBoxContainer/Category")
fact_container = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/FactListContainer/FactContainer")
fact_title_label = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer/VBoxContainer/fact_title")
fact_body_label = NodePath("MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/fact_body")
source_label = NodePath("MarginContainer/VBoxContainer/MarginContainer/SourceLabel")

[node name="Panel" type="Panel" parent="."]
material = SubResource("ShaderMaterial_3at6s")
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Category" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nyd6t")
text = "Facts: x"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_80rx0")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="FactListContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 270)
layout_mode = 2
theme = ExtResource("5_wceav")

[node name="FactContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/FactListContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="FactLink" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/FactListContainer/FactContainer" instance=ExtResource("3_omm3u")]
layout_mode = 2
text = "bruh"

[node name="TheFactContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="fact_title" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("7_lmege")
text = "bruh?"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("7_lmege")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("5_wceav")

[node name="fact_body" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer/MarginContainer/HBoxContainer/TheFactContainer/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("5_wceav")
text = "BRUH!"
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 100

[node name="SourceLabel" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer"]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
theme = ExtResource("5_wceav")
theme_override_font_sizes/font_size = 14
text = "source: idk"
horizontal_alignment = 2
autowrap_mode = 2

[node name="SaveButtons" type="Node2D" parent="."]
position = Vector2(-50, -130)

[node name="Back" type="Button" parent="SaveButtons"]
texture_filter = 5
custom_minimum_size = Vector2(100, 40)
offset_left = 73.0
offset_top = 513.0
offset_right = 173.0
offset_bottom = 553.0
scale = Vector2(0.75, 0.75)
theme = ExtResource("4_ik51a")
theme_override_colors/font_hover_color = Color(1, 0.533612, 0.468613, 1)
theme_override_font_sizes/font_size = 18
text = "Back"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="button_down" from="SaveButtons/Back" to="." method="_on_back_button_down"]
